Added some boiler code to sign-in

--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -3,6 +3,9 @@
     <div class="col-md-5 text-position ">
         <div >
           <a class="term-margin-left"></a>
+          <a routerLink="/sign-in" class="col-md-4 term-margin-left prime-white">
+            Sign-In
+          </a>
           <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
             Privacy Notice
           </a>
@@ -11,10 +14,6 @@
             Terms of Service
           </a>
           <!-- <a><app-terms></app-terms></a> -->
-
-          <a href (click)="(false)" class="col-md-4 term-margin-left prime-white" ngbDropdownToggle>
-            Sign-In
-          </a>
         </div>
 
     </div>
