--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,24 @@
-<p>sign-in works!</p>
+<div class="container">
+  <div class="background-boxed bg-rnd-trbl disp-fullpage">
+    <div class="col-md-12 prime-orange"> <!-- Top title section of page -->
+      <div class="col-md-4 page-space">
+        <img class="iiCt-logo-extra" src="/assets/images/logo_named_sml.png"/>
+      </div>
+      <div class="col-md-4">
+        <h1>Sign In to Portal</h1>
+      </div>
+    </div>
+    <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
+
+
+
+    </div>
+  </div>
+  <div class="next-page background-clear">
+    <h6></h6>
+  </div>
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
+
