--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -3,9 +3,12 @@
     <div class="col-md-5 text-position ">
         <div >
           <a class="term-margin-left"></a>
+          <!-- <a routerLink="sign-in" >
+            Sign-In
+          </a> -->
           <a routerLink="/sign-in" class="col-md-4 term-margin-left prime-white">
             Sign-In
-          </a>
+         </a>
           <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
             Privacy Notice
           </a>
