--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -6,27 +6,28 @@
       </div>
       <div class="col-md-4">
         <h1>Sign In to Portal</h1>
+        <h1></h1>
       </div>
     </div>
     <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
-      <form> 
+      <form>
         <div class="row margin-top">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="FirstName">First-Name</label>
+                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="FirstName">First Name</label>
             </div>
             <div class="col-md-4">
-                <input type="text" name="FirstName" #FirstName class="form-control" required autofocus /> 
+                <input type="text" name="FirstName" #FirstName class="form-control" required autofocus />
             </div>
         </div>
 
         <div class="row margin-top">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="LastName">Last-Name</label>
+                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="LastName">Last Name</label>
             </div>
             <div class="col-md-4">
-                <input type="text" name="LastName" #LastName class="form-control" required autofocus /> 
+                <input type="text" name="LastName" #LastName class="form-control" required autofocus />
             </div>
         </div>
 
@@ -36,7 +37,7 @@
                 <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Email">Email</label>
             </div>
             <div class="col-md-4">
-                <input type="Email" name="Email" #Email class="form-control" required autofocus /> 
+                <input type="Email" name="Email" #Email class="form-control" required autofocus />
             </div>
         </div>
 
@@ -46,17 +47,17 @@
                 <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Password">Password</label>
             </div>
             <div class="col-md-4">
-                <input type="password" name="Password" #Password class="form-control" required autofocus /> 
+                <input type="password" name="Password" #Password class="form-control" required autofocus />
             </div>
         </div>
 
         <div class="row margin-top">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="PhoneNumber">Phone-Number</label>
+                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="PhoneNumber">Phone Number</label>
             </div>
             <div class="col-md-4">
-                <input type="text" name="PhoneNumber" #PhoneNumber class="form-control" required autofocus /> 
+                <input type="text" name="PhoneNumber" #PhoneNumber class="form-control" required autofocus />
             </div>
         </div>
 
@@ -66,7 +67,7 @@
                 <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="city">City</label>
             </div>
             <div class="col-md-4">
-                <input type="text" name="city" #city class="form-control" required autofocus /> 
+                <input type="text" name="city" #city class="form-control" required autofocus />
             </div>
         </div>
 
@@ -74,7 +75,7 @@
             <div class="col-md-7"></div>
             <div class="col-md-2 btn-alignment">
                 <!-- <button type="submit" class="get-started"
-                    (click)="authService.register(Email.value, Password.value, 
+                    (click)="authService.register(Email.value, Password.value,
                     FirstName.value,LastName.value,PhoneNumber.value,
                     city.value)">
                         Sign-Up
@@ -83,7 +84,7 @@
         </div>
     </form>
 
-  
+
 
 
     </div>
