--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -12,6 +12,35 @@
     <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
       <form>
         <div class="row margin-top">
+          <div class="col-md-3"></div>
+          <div class="col-md-2">
+              <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Email">Email</label>
+          </div>
+          <div class="col-md-4">
+              <input type="Email" name="Email" #Email class="form-control" required autofocus />
+          </div>
+        </div>
+        <div class="row margin-top">
+            <div class="col-md-3"></div>
+            <div class="col-md-2">
+                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Password">Password</label>
+            </div>
+            <div class="col-md-4">
+                <input type="password" name="Password" #Password class="form-control" required autofocus />
+            </div>
+        </div>
+
+        <div class="row margin-top">
+          <div class="col-md-3"></div>
+          <h3></h3>
+          <div class="col-md-5"></div>
+          <div class="col-md-4">
+            <h4>Include when signing up...</h4>
+            <h5></h5>
+        </div>
+        </div>
+
+        <div class="row margin-top">
             <div class="col-md-3"></div>
             <div class="col-md-2">
                 <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="FirstName">First Name</label>
@@ -28,26 +57,6 @@
             </div>
             <div class="col-md-4">
                 <input type="text" name="LastName" #LastName class="form-control" required autofocus />
-            </div>
-        </div>
-
-        <div class="row margin-top">
-            <div class="col-md-3"></div>
-            <div class="col-md-2">
-                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Email">Email</label>
-            </div>
-            <div class="col-md-4">
-                <input type="Email" name="Email" #Email class="form-control" required autofocus />
-            </div>
-        </div>
-
-        <div class="row margin-top">
-            <div class="col-md-3"></div>
-            <div class="col-md-2">
-                <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Password">Password</label>
-            </div>
-            <div class="col-md-4">
-                <input type="password" name="Password" #Password class="form-control" required autofocus />
             </div>
         </div>
 
