--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
         <img class="iiCt-logo-extra" src="/assets/images/logo_named_sml.png"/>
       </div>
       <div class="col-md-4">
-        <h1>Sign In to Portal</h1>
+        <h1>Sign-In to Portal</h1>
         <h1></h1>
       </div>
     </div>
@@ -29,10 +29,20 @@
                 <input type="password" name="Password" #Password class="form-control" required autofocus />
             </div>
         </div>
+        <div class="row margin-top">
+          <div class="col-md-5"></div>
+          <div class="col-md-2 btn-alignment">
+            <h5></h5>
+              <button type="submit" class="button_look"
+                  (click)="authService.register(Email.value, Password.value)">
+                      Sign-In
+              </button>
+          </div>
+      </div>
 
         <div class="row margin-top">
           <div class="col-md-3"></div>
-          <h3></h3>
+          <h2></h2>
           <div class="col-md-5"></div>
           <div class="col-md-4">
             <h4>Include when signing up...</h4>
@@ -81,14 +91,15 @@
         </div>
 
         <div class="row margin-top">
-            <div class="col-md-7"></div>
+            <div class="col-md-5"></div>
             <div class="col-md-2 btn-alignment">
-                <!-- <button type="submit" class="get-started"
+              <h5></h5>
+                <button type="submit" class="button_look"
                     (click)="authService.register(Email.value, Password.value,
                     FirstName.value,LastName.value,PhoneNumber.value,
                     city.value)">
                         Sign-Up
-                </button> -->
+                </button>
             </div>
         </div>
     </form>
