Finale update to buttons and label placements

--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -12,6 +12,13 @@
     <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
       <form>
         <div class="row margin-top">
+          <div class="col-md-5"></div>
+          <div class="col-md-4">
+            <h4>Please enter...</h4>
+            <h5></h5>
+          </div>
+        </div>
+        <div class="row margin-top">
           <div class="col-md-3"></div>
           <div class="col-md-2">
               <label class="txt-clr-white padding-top txt-alignment txt-apperance" for="Email">Email</label>
@@ -38,16 +45,15 @@
                       Sign-In
               </button>
           </div>
-      </div>
+        </div>
 
         <div class="row margin-top">
-          <div class="col-md-3"></div>
           <h2></h2>
           <div class="col-md-5"></div>
           <div class="col-md-4">
-            <h4>Include when signing up...</h4>
+            <h4>Include these fields when signing up...</h4>
             <h5></h5>
-        </div>
+          </div>
         </div>
 
         <div class="row margin-top">
