signup works without uid

--- a/iiCt/src/app/sign-in/sign-in.component.html
+++ b/iiCt/src/app/sign-in/sign-in.component.html
@@ -100,12 +100,12 @@
             <div class="col-md-5"></div>
             <div class="col-md-2 btn-alignment">
               <h5></h5>
-                <!-- <button type="submit" class="button_look"
+                <button type="submit" class="button_look"
                     (click)="authService.register(Email.value, Password.value,
                     FirstName.value,LastName.value,PhoneNumber.value,
                     city.value)">
                         Sign-Up
-                </button> -->
+                </button>
             </div>
         </div>
     </form>
