fix to alignment on project page

--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -73,11 +73,11 @@
         <h1></h1>
         <div class="next-page">
           <div>
-            <img class="right-image-png" src="/assets/images/VARA.gif"/>
+            <img class="right-image-gif" src="/assets/images/VARA.gif"/>
           </div>
           <div class="">
-            <h4 class="prime-orange title-fonts">Image and Website Design</h4>
-            <p class="body-fonts">
+            <h4 class="prime-orange title-fonts left-two">Image and Website Design</h4>
+            <p class="body-fonts left-two">
               Created a series of visual collateral materials,
               including the logo for a start-up venture.
               Created a video and overall look for the website:
