added company linked in link

--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -27,7 +27,7 @@
             <h3 class="text-position prime-orange" >Follow us</h3>
         </div>
         <div class="col-md-2 next-page">
-          <a href="https://www.linkedin.com">
+          <a href="https://www.linkedin.com/company/iiconsult-tech-inc">
             <img class="term-margin-left img-greyed-out" src="assets/images/linkedin_rnd.png" alt="linkedin"></a>
 
           <img class="term-margin-left img-greyed-out" src="assets/images/facebook_rnd.svg" alt="facebook">
