added link to Android dev account info

--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -53,7 +53,8 @@
     <div class ="col-md-5"></div>
     <div class ="col-md-2">
         <img class="term-margin-left store-img img-greyed-out" src="/assets/images/apple_apps.svg" alt="Apple">
-        <img class="term-margin-left store-img img-greyed-out" src="/assets/images/google_play.svg" alt="Google">
+        <a href="https://play.google.com/store/apps/dev?id=9115988388994498892">
+        <img class="term-margin-left store-img img-greyed-out" src="/assets/images/google_play.svg" alt="Google"></a>
     </div>
   </div>
 </div>
