--- a/iiCt/src/app/footer/privacy/privacy.component-iiCt-Home.html
+++ b/iiCt/src/app/footer/privacy/privacy.component-iiCt-Home.html
@@ -25,7 +25,7 @@
           </p>
           <p></p>
           <p class= "prime-white term-text">
-              lease take a look at our updated Privacy Policy and Terms of Service and
+              Please take a look at our updated Privacy Policy and Terms of Service and
               reach out to service@iiconsulttech.com if you have any questions.
               The updated Privacy Policy and Terms of Service are effective as of September 1,
               2019.
