made update to open links in new pages vs current page

--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -9,7 +9,7 @@
           <div>
             <h1 class="left-title">ALL ABOUT ME</h1>
           </div>
-          <a href="https://www.linkedin.com/in/gervan-p-nantel/">
+          <a href="https://www.linkedin.com/in/gervan-p-nantel/" target="_blank" rel="norefferrer">
             <img class="left-li-image" src="/assets/images/linkedin.svg"/>
           </a>
       </div>
