faq with ng bootstarp

--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -17,14 +17,14 @@
           <!-- <a routerLink="/sign-in" class="col-md-4 term-margin-left prime-white">
             Sign-In
          </a> -->
-          <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
+          <!-- <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
             Privacy Notice
-          </a>
-          <!-- <a><app-privacy></app-privacy></a> -->
-          <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
+          </a> -->
+          <app-privacy></app-privacy>
+          <!-- <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
             Terms of Service
-          </a>
-          <!-- <a><app-terms></app-terms></a> -->
+          </a> -->
+          <app-terms></app-terms>
         </div>
 
     </div>
@@ -39,7 +39,9 @@
             <img class="term-margin-left img-greyed-out" src="assets/images/linkedin_rnd.png" alt="linkedin"></a>
 
           <img class="term-margin-left img-greyed-out" src="assets/images/facebook_rnd.svg" alt="facebook">
-          <img class="term-margin-left img-greyed-out" src="assets/images/twitter_rnd.png" alt="twitter">
+          
+          <a href="https://twitter.com/iiconsulttech?ref_src=twsrc%5Etfw" target="_blank" rel="norefferrer">
+          <img  class="term-margin-left img-greyed-out" src="assets/images/twitter_rnd.png" alt="twitter"> </a>
         </div>
     </div>
   </div>
