--- a/iiCt/src/app/footer/privacy/privacy.component.html
+++ b/iiCt/src/app/footer/privacy/privacy.component.html
@@ -1,4 +1,4 @@
-<a ngbDropdown>
+<!-- <a ngbDropdown>
   <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
      Privacy Notice
   </a>
@@ -33,4 +33,4 @@
       </div>
   </div>
 </a>
-
+ -->
