--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -21,7 +21,9 @@
         Contact Us
     </a>
     <a routerLink="home-page" class="item menutext"></a>
-
+    <a routerLink="faq" class="item menutext">
+      Faq
+   </a>
     <a routerLink="about-me" class="item menutext">
        About Me
     </a>
