Made project target open in new window

--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -81,7 +81,7 @@
               Created a series of visual collateral materials,
               including the logo for a start-up venture.
               Created a video and overall look for the website:
-              <a class="prime-orange" href="https://varaplatforms.com/#/home">www.varaplatforms.com</a>
+              <a class="prime-orange" href="https://varaplatforms.com/#/home" target="_blank">www.varaplatforms.com</a>
             </p>
           </div>
         </div>
