--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -39,7 +39,8 @@
             <img class="term-margin-left img-greyed-out" src="assets/images/linkedin_rnd.png" alt="linkedin"></a>
 
           <img class="term-margin-left img-greyed-out" src="assets/images/facebook_rnd.svg" alt="facebook">
-          <img class="term-margin-left img-greyed-out" src="assets/images/twitter_rnd.png" alt="twitter">
+          <a href="https://twitter.com/iiconsulttech?ref_src=twsrc%5Etfw" target="_blank" rel="norefferrer">
+            <img  class="term-margin-left img-greyed-out" src="assets/images/twitter_rnd.png" alt="twitter"> </a>
         </div>
     </div>
   </div>
